ingress_deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressdeploy
  annotations:
   kubernetes.io/ingress.class: kong
   konghq.com/strip-path: "true"
  labels:
    name: ingressdeploy
spec:
 rules:
 - http:
     paths:
     - path: /v1/task
       pathType: Prefix
       backend:
         service:
           name: taskapi
           port:
             number: 80
     - path: /v1/taskprocess
       pathType: Prefix
       backend:
         service:
           name: taskprocesserapi
           port:
             number: 80
